Finally finished updating SwaggerDocs for post requests
